# ResearchMind

./: .gitignore  Dockerfile  GITHUB_REPOSITORY_ANALYSIS.md  LLM_PROVIDER_FIXES.md  Makefile  README.md  TEST_RESULTS.md  TEST_SUITE_DOCUMENTATION.md  debug_answers.txt  docker-compose.yml  fix_quotes.js  pytest.ini  requirements.txt
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agents/: base_agent.py  decision_agent.py  planner_agent.py  reasoning_agent.py  research_agent.py  retrieval_agent.py  summarizer_agent.py
backend/app/api/: websockets.py
backend/app/auth/: __init__.py  dependencies.py  jwt_handler.py  rbac.py
backend/app/core/: cache.py  config.py  database.py  errors.py  observability.py  security.py
backend/app/document_processing/: citations.py  extractive.py  pdf_parser.py  summarization_demo.py  summarizer.py  transformer_summary.py  types.py
backend/app/evaluation/: metrics.py  ragas_evaluator.py
backend/app/events/: __init__.py  domain_events.py  event_bus.py
backend/app/graphs/: enterprise_graph.py
backend/app/llm/: base_provider.py  bedrock_provider.py  gemini_provider.py  mock_provider.py  openai_provider.py  openrouter_provider.py  prompt_templates.py  provider_factory.py
backend/botocore/: __init__.py
backend/researchmind_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_chunking.py  test_delete_paper.py  test_empty_evidence.py  test_metadata_extraction.py  test_multi_paper_retrieval.py  test_retrieval_first.py  test_transformer_loader.py
(+178 files in other folders)
