[project]
name = "researchmind-backend"
version = "0.1.0"
description = "FastAPI backend for ResearchMind AI"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.3.0",
  "python-multipart>=0.0.9",
  "pymupdf>=1.24.0",
  "pdfplumber>=0.11.0",
  "sentence-transformers>=3.0.0",
  "faiss-cpu>=1.8.0",
  "numpy>=1.26.0",
  "scikit-learn>=1.5.0",
  "tenacity>=8.3.0",
  "boto3>=1.34.0",
  "langchain>=0.2.0",
  "langchain-core>=0.2.0",
  "langgraph>=0.0.60",
  "sqlalchemy>=2.0.0",
  "asyncpg>=0.29.0",
  "redis>=5.0.0",
  "opentelemetry-sdk>=1.24.0",
  "opentelemetry-instrumentation-fastapi>=0.45b0",
  "PyJWT>=2.8.0",
  "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
  "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402", "F841"]
"tests/integration/*" = ["E402", "F841"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["botocore*"]

[tool.pytest.ini_options]
testpaths = ["../tests", "tests"]
pythonpath = ["."]
